# t-6693

./: Makefile  build.sh  manage.py  pyproject.toml  requirements.txt  ruff.toml
t_6693/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
t_6693/calc/: apps.py  calc.py  forms.py  urls.py  views.py
t_6693/comms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
t_6693/comms/migrations/: 0001_initial.py  0002_comm_descr_man_comm_descr_wom_alter_comm_descr.py  0002_rename_descr_comm_max_descr_and_more.py
t_6693/comps_comms/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
t_6693/comps_comms/migrations/: 0001_initial.py  0002_alter_comp_comm_descr_1_alter_comp_comm_descr_2.py
t_6693/comps_miss/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
t_6693/comps_miss/migrations/: 0001_initial.py  0002_alter_comp_miss_descr_1_alter_comp_miss_descr_2.py
t_6693/inspirations/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
t_6693/inspirations/migrations/: 0001_initial.py  0002_alter_inspiration_descr.py
t_6693/missions/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
t_6693/missions/migrations/: 0001_initial.py  0002_alter_mission_descr.py
t_6693/templates/: base.html  calc.html  confirm.html  delete.html  index.html  list.html  object.html  popup.html
t_6693/templates/calc/: calc_1.html  calc_1_pdf.html  calc_2.html  calc_2_pdf.html
t_6693/templates/comms/: comms.html
t_6693/templates/comps_comms/: comps_comms.html
t_6693/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+7 files in other folders)
