[project]
name = "t-6693"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django-bootstrap5>=24.3",
    "django>=5.1.4",
    "dj-database-url>=2.3.0",
    "python-dotenv>=1.0.1",
    "django-renderpdf>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
