[project]
name = "t-6693"
version = "0.1.0"
description = "t-6693"
readme = "README.md"
requires-python = ">=3.10"
# packages = [{include = "t_6693"}]

dependencies = [
    "django-bootstrap5>=24.3",
    "django>=5.1.4",
    "dj-database-url>=2.3.0",
    "python-dotenv>=1.0.1",
    "django-renderpdf>=4.0.0",
    "psycopg2-binary>=2.9.10",
    "gunicorn>=22.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["t_6693"]
